--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
         color: lightblue;
     }
 
-    /* Hamburger menu button (hidden on desktop) */
     .menu-toggle {
         display: none;
         position: absolute;
@@ -61,8 +60,11 @@
         right: 25px;
         font-size: 26px;
         cursor: pointer;
-        color: white;
+        color: navy;
     }
+.menu-toggle:hover {
+    color: black;
+}
 
     .content {
         flex: 1;
@@ -356,3 +358,4 @@
 </script>
 </body>
 </html>
+
