--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
         color:  black;
     }
 
-
     .content {
         flex: 1;
         display: none;
@@ -170,31 +169,47 @@
         box-shadow: 0 6px 12px gray;
     }
 
-    footer {
-        background-color: dodgerblue;
-        color: white;
-        text-align: center;
-        padding: 10px;
-        position: fixed;
-        width: 100%;
-        bottom: 0;
+    .projects-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+        margin-top: 20px;
     }
 
-    .projects ul {
-        list-style-type: none;
-        padding: 0;
-    }
-
-    .projects li {
+    .project-card {
         background-color: lightblue;
-        margin: 10px auto;
-        max-width: 450px;
-        padding: 15px;
+        padding: 20px;
         border-radius: 10px;
-        box-shadow: 0 3px 6px gray;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        max-width: 400px;
         text-align: left;
-        font-size: 16px;
+        transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .project-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+    }
+
+    .project-card h3 {
         color: navy;
+        margin-bottom: 10px;
+    }
+
+    .project-card p {
+        color: darkblue;
+        margin-bottom: 10px;
+    }
+
+    .project-card a {
+        color: dodgerblue;
+        text-decoration: none;
+        font-weight: 500;
+    }
+
+    .project-card a:hover {
+        text-decoration: underline;
     }
 
     .contact-info {
@@ -212,6 +227,16 @@
     .contact-info a:hover {
         text-decoration: underline;
         color: mediumblue;
+    }
+
+    footer {
+        background-color: dodgerblue;
+        color: white;
+        text-align: center;
+        padding: 10px;
+        position: fixed;
+        width: 100%;
+        bottom: 0;
     }
 
     @media (max-width: 768px) {
@@ -247,32 +272,14 @@
             padding: 20px;
         }
 
-        .home-text h1 {
-            font-size: 26px;
-        }
+        .home-text h1 { font-size: 26px; }
+        .home-text h2 { font-size: 18px; }
+        .home-text p { font-size: 16px; }
+        .home .quote { font-size: 20px; }
 
-        .home-text h2 {
-            font-size: 18px;
-        }
+        .about-item, .project-card, .skill-card, .contact-info { font-size: 16px; max-width: 100%; }
 
-        .home-text p {
-            font-size: 16px;
-        }
-
-        .home .quote {
-            font-size: 20px;
-        }
-
-        .about-item, .projects li, .skill-card, .contact-info {
-            font-size: 16px;
-            padding: 10px;
-            max-width: 100%;
-        }
-
-        footer {
-            font-size: 14px;
-            padding: 8px;
-        }
+        footer { font-size: 14px; padding: 8px; }
     }
 </style>
 </head>
@@ -293,19 +300,34 @@
         <img src="https://imgcdn.stablediffusionweb.com/2024/3/4/5c8a5d08-a318-4764-9c94-32c077df91d9.jpg" alt="Developer at computer">
         <div class="home-text">
             <h1>Hi, I'm Kirubel!</h1>
-            <h2>Passionate Learner & Future Web Developer</h2>
-            <p>Welcome to my portfolio! I'm a 3rd year Computer Science student from Gondar University. I enjoy coding, exploring new technologies, and building projects that help me learn and grow.</p>
-            <p>Currently improving my skills in <b>HTML, CSS and JavaScript</b> to become a professional web developer.</p>
-            <p class="quote">"Step by step, line by line, I’m building my future!"</p>
+            <h2>Passionate Learner & Aspiring Full-Stack Developer</h2>
+<p>Hi! I'm a 3rd-year Computer Science student at Gondar University with a passion for coding and creating innovative solutions. I love exploring new technologies and building projects that challenge me to grow and improve every day.</p>
+<p>Currently, I am honing my skills in <b>HTML, CSS, and JavaScript</b> to become a skilled and professional web developer capable of building responsive, interactive, and user-friendly web applications.</p>
+<p class="quote">"Step by step, line by line, I’m crafting my future"</p>
+
         </div>
     </div>
 </div>
 
 <div id="about" class="content">
-    <div class="about-item">I am currently learning HTML, CSS, JavaScript, Java, Algorithms, and CTT-based coding in Java.</div>
-    <div class="about-item">I have worked on team coding projects like a <b>Hotel Booking System</b> and <b>Gym Management Database</b>, mainly as code-based projects (not apps).</div>
-    <div class="about-item">I enjoy solving problems, exploring new technologies, and gradually improving my programming skills.</div>
-    <div class="about-item">My dream is to work in web development and software engineering, building solutions that can help people and organizations in the future.</div>
+    <div class="about-item">
+        I am currently learning <b>HTML, CSS, and JavaScript</b> to improve my skills and become a proficient web developer in the future.
+    </div>
+    <div class="about-item">
+        I aspire to become a <b>full-stack developer</b>, capable of designing and building complete web applications, handling both the front-end and back-end.
+    </div>
+    <div class="about-item">
+        On the front-end, I enjoy creating responsive, user-friendly websites that are visually appealing and interactive. On the back-end, I aim to strengthen my skills in <b>Java, Node.js, and databases</b> to build efficient, secure, and scalable applications.
+    </div>
+    <div class="about-item">
+        I have worked on team coding projects like a <b>Hotel Booking System</b> and a <b>Gym Management Database</b>, mainly as code-based projects (not apps). These projects helped me gain hands-on experience with databases, logic implementation, and team collaboration.
+    </div>
+    <div class="about-item">
+        I enjoy solving problems, exploring new technologies, and gradually improving my programming skills through practice and real-world projects.
+    </div>
+    <div class="about-item">
+        My dream is to work in <b>web development and software engineering</b>, building solutions that can help people and organizations in meaningful ways while growing as a full-stack developer.
+    </div>
 </div>
 
 <div id="skills" class="content">
@@ -322,17 +344,29 @@
 </div>
 
 <div id="projects" class="content projects">
-    <ul>
-        <li><b>Hotel Booking System</b> — Team coding project in Java, handling booking and room management with code.</li>
-        <li><b>Gym Management Database</b> — Team project using Oracle SQL to manage members, payments, and schedules.</li>
-    </ul>
+    <div class="projects-container">
+        <div class="project-card">
+            <h3>Hotel Booking System</h3>
+            <p>A team project in Java designed to manage hotel room bookings, track availability, and handle customer reservations efficiently. I led coding for booking management; the system is simple and user-friendly.</p>
+            <a href="YOUR_HOTEL_PROJECT_GITHUB_LINK" target="_blank">View Project on GitHub</a>
+        </div>
+        <div class="project-card">
+            <h3>Gym Management Database</h3>
+            <p>Developed using Oracle SQL, this project manages gym members, tracks payments, schedules, and provides reports for efficient gym management. This is a simple Oracle-based system.</p>
+            <a href="YOUR_GYM_PROJECT_GITHUB_LINK" target="_blank">View Project on GitHub</a>
+        </div>
+    </div>
 </div>
 
 <div id="contact" class="content">
     <div class="contact-info">
         <p>📞 Phone: +251 935 651 125</p>
         <p>📧 Email: <a href="mailto:kipazgreat1004@gmail.com">kipazgreat1004@gmail.com</a></p>
-        <p>Telegram: <a href="https://t.me/kipabaca" target="_blank">@kipabaca</a></p>
+        <p>💬 Telegram: 
+            <a href="https://t.me/kipabaca" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width:18px; vertical-align:middle; margin-right:5px;">@kipabaca
+            </a>
+        </p>
         <p>🌐 GitHub: <a href="https://github.com/kipaZgreat" target="_blank">kipaZgreat</a></p>
     </div>
 </div>
@@ -347,7 +381,7 @@
             section.classList.remove('active');
         });
         document.getElementById(id).classList.add('active');
-        document.getElementById('navbar').classList.remove('active'); // close menu on mobile after click
+        document.getElementById('navbar').classList.remove('active'); 
     }
 
     function toggleMenu() {
@@ -356,5 +390,3 @@
 </script>
 </body>
 </html>
-
-
