--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+r<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -348,12 +348,12 @@
         <div class="project-card">
             <h3>Hotel Booking System</h3>
             <p>A team project in Java designed to manage hotel room bookings, track availability, and handle customer reservations efficiently. I led coding for booking management; the system is simple and user-friendly.</p>
-            <a href="YOUR_HOTEL_PROJECT_GITHUB_LINK" target="_blank">View Project on GitHub</a>
+            <a href="https://kipazgreat.github.io/hotel-reservation-system-java/" target="_blank">View Project on GitHub</a>
         </div>
         <div class="project-card">
             <h3>Gym Management Database</h3>
             <p>Developed using Oracle SQL, this project manages gym members, tracks payments, schedules, and provides reports for efficient gym management. This is a simple Oracle-based system.</p>
-            <a href="YOUR_GYM_PROJECT_GITHUB_LINK" target="_blank">View Project on GitHub</a>
+            <a href="https://kipazgreat.github.io/gym_management_and_tracker.sql/" target="_blank">View Project on GitHub</a>
         </div>
     </div>
 </div>
@@ -362,7 +362,7 @@
     <div class="contact-info">
         <p>📞 Phone: +251 935 651 125</p>
         <p>📧 Email: <a href="mailto:kipazgreat1004@gmail.com">kipazgreat1004@gmail.com</a></p>
-        <p>💬 Telegram: 
+        <p> Telegram: 
             <a href="https://t.me/kipabaca" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width:18px; vertical-align:middle; margin-right:5px;">@kipabaca
             </a>
