--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@ r<!DOCTYPE html>
     <div class="contact-info">
         <p>📞 Phone: +251 935 651 125</p>
         <p>📧 Email: <a href="mailto:kipazgreat1004@gmail.com">kipazgreat1004@gmail.com</a></p>
-        <p> Telegram: 
+        <p>
             <a href="https://t.me/kipabaca" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width:18px; vertical-align:middle; margin-right:5px;">@kipabaca
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width:18px; vertical-align:middle; margin-right:5px;"> Telegram : 7@kipabaca
             </a>
         </p>
         <p>🌐 GitHub: <a href="https://github.com/kipaZgreat" target="_blank">kipaZgreat</a></p>
