--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@ r<!DOCTYPE html>
         <img src="https://imgcdn.stablediffusionweb.com/2024/3/4/5c8a5d08-a318-4764-9c94-32c077df91d9.jpg" alt="Developer at computer">
         <div class="home-text">
             <h1>Hi, I'm Kirubel!</h1>
-            <h2>Passionate Learner & Aspiring Full-Stack Developer</h2>
+            <h2>Curious mind  Creative code</h2>
 <p>Hi! I'm a 3rd-year Computer Science student at Gondar University with a passion for coding and creating innovative solutions. I love exploring new technologies and building projects that challenge me to grow and improve every day.</p>
 <p>Currently, I am honing my skills in <b>HTML, CSS, and JavaScript</b> to become a skilled and professional web developer capable of building responsive, interactive, and user-friendly web applications.</p>
-<p class="quote">"Step by step, line by line, I’m crafting my future"</p>
+<p class="quote">"Not just writing code writing possibility"</p>
 
         </div>
     </div>
@@ -364,10 +364,18 @@ r<!DOCTYPE html>
         <p>📧 Email: <a href="mailto:kipazgreat1004@gmail.com">kipazgreat1004@gmail.com</a></p>
         <p>
             <a href="https://t.me/kipabaca" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width:18px; vertical-align:middle; margin-right:5px;"> Telegram : 7@kipabaca
+                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width:18px; vertical-align:middle; margin-right:5px;"> Telegram : @kipabaca
             </a>
         </p>
-        <p>🌐 GitHub: <a href="https://github.com/kipaZgreat" target="_blank">kipaZgreat</a></p>
+        <p>
+  <a href="https://github.com/kipaZgreat" target="_blank" style="text-decoration: none;">
+    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" 
+         alt="GitHub" 
+         style="width:18px; vertical-align:middle; margin-right:5px;">
+    GitHub: kipaZgreat
+  </a>
+</p>
+
     </div>
 </div>
 
@@ -390,3 +398,4 @@ r<!DOCTYPE html>
 </script>
 </body>
 </html>
+
