--- a/index.html
+++ b/index.html
@@ -347,16 +347,29 @@ r<!DOCTYPE html>
     <div class="projects-container">
         <div class="project-card">
             <h3>Hotel Booking System</h3>
-            <p>A team project in Java designed to manage hotel room bookings, track availability, and handle customer reservations efficiently. I led coding for booking management; the system is simple and user-friendly.</p>
-            <a href="https://kipazgreat.github.io/hotel-reservation-system-java/" target="_blank">View Project on GitHub</a>
+            <p>
+                A Java-based project designed to manage hotel room bookings, 
+                track availability, and handle customer reservations efficiently. 
+                I led coding for booking management; the system is simple and user-friendly.
+            </p>
+            <a href="https://github.com/kipaZgreat/hotel-reservation-system-java/tree/main" target="_blank">
+                🔗 View Project Code on GitHub
+            </a>
         </div>
+
         <div class="project-card">
             <h3>Gym Management Database</h3>
-            <p>Developed using Oracle SQL, this project manages gym members, tracks payments, schedules, and provides reports for efficient gym management. This is a simple Oracle-based system.</p>
-            <a href="https://kipazgreat.github.io/gym_management_and_tracker.sql/" target="_blank">View Project on GitHub</a>
+            <p>
+                Developed using Oracle SQL, this project manages gym members, tracks payments, 
+                schedules, and provides reports for efficient gym management.
+            </p>
+            <a href="https://github.com/kipaZgreat/gym_management_and_tracker.sql" target="_blank">
+                🔗 View SQL File on GitHub
+            </a>
         </div>
     </div>
 </div>
+
 
 <div id="contact" class="content">
     <div class="contact-info">
@@ -398,4 +411,5 @@ r<!DOCTYPE html>
 </script>
 </body>
 </html>
+
 
