--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@ r<!DOCTYPE html>
 
 <div id="home" class="content active home">
     <div class="home-container">
-        <img src="https://imgcdn.stablediffusionweb.com/2024/3/4/5c8a5d08-a318-4764-9c94-32c077df91d9.jpg" alt="Developer at computer">
+        <img src="Image.png" alt="kirubel photo">
+ alt="Developer at computer">
         <div class="home-text">
             <h1>Hi, I'm Kirubel!</h1>
             <h2>Curious mind  Creative code</h2>
@@ -411,5 +412,6 @@ r<!DOCTYPE html>
 </script>
 </body>
 </html>
+
 
 
