--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-r<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -412,6 +412,7 @@ r<!DOCTYPE html>
 </script>
 </body>
 </html>
+
 
 
 
