--- a/index.html
+++ b/index.html
@@ -374,24 +374,13 @@
 
 <div id="contact" class="content">
     <div class="contact-info">
-        <p>📞 Phone: +251 935 651 125</p>
+        <p>📞 Phone: <a href="tel:+251935651125">+251 935 651 125</a></p>
         <p>📧 Email: <a href="mailto:kipazgreat1004@gmail.com">kipazgreat1004@gmail.com</a></p>
-        <p>
-            <a href="https://t.me/kipabaca" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width:18px; vertical-align:middle; margin-right:5px;"> Telegram : @kipabaca
-            </a>
-        </p>
-        <p>
-  <a href="https://github.com/kipaZgreat" target="_blank" style="text-decoration: none;">
-    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" 
-         alt="GitHub" 
-         style="width:18px; vertical-align:middle; margin-right:5px;">
-    GitHub: kipaZgreat
-  </a>
-</p>
-
+        <p><a href="https://t.me/kipabaca" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width:18px; vertical-align:middle; margin-right:5px;"> Telegram : @kipabaca</a></p>
+        <p><a href="https://github.com/kipaZgreat" target="_blank" style="text-decoration: none;"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" style="width:18px; vertical-align:middle; margin-right:5px;"> GitHub: kipaZgreat</a></p>
     </div>
 </div>
+
 
 <footer>
     &copy; 2025 Kirubel Workalemahu. All rights reserved.
@@ -412,6 +401,7 @@
 </script>
 </body>
 </html>
+
 
 
 
