--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     }
 
     .home img {
-        width: 380px;
+        width: 340px;
         height: auto;
         border-radius: 14px;
         box-shadow: 0 6px 12px gray;
@@ -217,15 +217,16 @@
 
     
     .contact-info {
-        font-size: 16px;
-        line-height: 1.8;
+        font-size: 20px;
+        line-height: 2.2;
         color: mediumblue;
-        margin-bottom: 15px;
+        margin-bottom: 30px;
         text-align: center;
     }
 
     .contact-info a {
         color: dodgerblue;
+           font-weight: 500;
         text-decoration: none;
     }
 
@@ -304,8 +305,8 @@
         <div class="home-text">
             <h1>Hi, I'm Kirubel!</h1>
             <h2>Curious mind · Creative code</h2>
-            <p>Hi! I'm a 3rd-year Computer Science student at Gondar University with a passion for coding and creating innovative solutions. I love exploring new technologies and building projects that challenge me to grow and improve every day.</p>
-            <p>Currently, I am honing my skills in <b>HTML, CSS, and JavaScript</b> to become a skilled and professional web developer capable of building responsive, interactive, and user-friendly web applications.</p>
+            <p>Hi! I'm a 3rd-year Computer Science student at university of Gondar. Coding inspires me to think, learn, and create something meaningful. I love experimenting with new technologies and improving my skills through every challenge I take on.</p>
+            <p>Currently, I am improving my skills in <b>HTML, CSS, and JavaScript</b> to become a skilled and professional web developer capable of building responsive, interactive, and user-friendly web applications.</p>
             <p class="quote">"Not just writing code, writing possibility"</p>
         </div>
     </div>
@@ -335,7 +336,7 @@
         <div class="skill-card">HTML & CSS (improving)</div>
         <div class="skill-card">JavaScript (learning)</div>
         <div class="skill-card">Java</div>
-        <div class="skill-card">Algorithm (learning)</div>
+        <div class="skill-card">Algorithm </div>
         <div class="skill-card">C++</div>
         <div class="skill-card">Photoshop</div>
         <div class="skill-card">Database (Oracle SQL)</div>
@@ -393,3 +394,4 @@
 </script>
 </body>
 </html>
+
