--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         I am currently learning <b>HTML, CSS, and JavaScript</b> to improve my skills and become a proficient web developer in the future.
     </div>
     <div class="about-item">
-        I aspire to become a <b>full-stack developer</b>, capable of designing and building complete web applications, handling both the front-end and back-end.
+        I want to become a <b>full-stack developer</b>, capable of designing and building complete web applications, handling both the front-end and back-end.
     </div>
     <div class="about-item">
         On the front-end, I enjoy creating responsive, user-friendly websites that are visually appealing and interactive. On the back-end, I aim to strengthen my skills in <b>Java, Node.js, and databases</b> to build efficient, secure, and scalable applications.
@@ -394,5 +394,6 @@
 </script>
 </body>
 </html>
+
 
 
